--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,35 @@
 body {
     color: white;
-    background: black;
+    background: rgb(58, 0, 0);
     margin: 0px;
     font-family: "Chakra Petch", sans-serif;
     margin-bottom: 100px;
 }
 
 header {
-    border-bottom: solid 2px rgb(42, 122, 228);
-    padding: 20px;
+    border-bottom: solid 2px rgb(255, 184, 52);
+    padding: 10px;
     font-size: 32px;
-    color: rgb(42, 122, 228);
+    color: rgb(255, 184, 52);
 }
 
 .chamada {
-    background: rgb(99, 7, 7);
+    background: rgb(22, 0, 0);
     padding-bottom: 80px;
     padding-top: 80px;
     display: flex;
     justify-content: center;
+    border-bottom: solid 2px rgb(255, 184, 52);
+}
+
+.camada-vid-main {
+    background: rgb(22, 0, 0);
+    padding-bottom: 80px;
+    padding-top: 80px;
+    margin-right: 5%;
+    display: flex;
+    justify-content: center;
+    border-bottom: solid 2px rgb(255, 184, 52);
 }
 
 .chamada-texto {
@@ -56,5 +67,5 @@ p {
 }
 
 .categoria h2 {
-    color: rgb(42, 122, 228);
+    color: rgb(255, 184, 52);
 }
